Update 'backend-tests-dotnet-basic-jtszoljr' component image to: quay.io/rhtap_qe/backend-tests-dotnet-basic-jtszoljr:442bf6b2e3544db948707811860b750907cbce9f@sha256:2343de669f2db79829e36aeef262590c66e4caf0a05a6ec1607598a32aff10da

--- a/components/backend-tests-dotnet-basic-jtszoljr/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-dotnet-basic-jtszoljr/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-dotnet-basic-jtszoljr
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-dotnet-basic-jtszoljr:442bf6b2e3544db948707811860b750907cbce9f@sha256:2343de669f2db79829e36aeef262590c66e4caf0a05a6ec1607598a32aff10da
+          name: container-image
